--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-#  sdk: '>=3.2.3 <4.0.0'
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: '>=3.2.3 <4.0.0'
+#  sdk: '>=3.3.0 <4.0.0'
 #  TODO Update dart SDK
 
 # Dependencies specify other packages that your package needs in order to work.
@@ -39,7 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
-  device_info_plus: ^10.1.0
+#  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +64,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -79,10 +80,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: playfair
+      fonts:
+        - asset: assets/fonts/playfairDisplay_regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
