--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,6 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
-#  sdk: '>=3.3.0 <4.0.0'
-#  TODO Update dart SDK
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,7 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
-#  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
@@ -84,11 +81,11 @@ flutter:
     - family: playfair
       fonts:
         - asset: assets/fonts/playfairDisplay_regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    #       - asset: fonts/Schyler-Italic.ttf
+    #         style: italic
+    - family: inconsolata
+      fonts:
+        - asset: assets/fonts/inconsolata_medium.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
