Re-Mapped icons path and Added profile screen

--- a/android/keystore.properties
+++ b/android/keystore.properties
@@ -1,6 +1,6 @@
-DEBUG_KEY_STORE_PATH=C\:\\Akshay\\Android_Projects\\Active_Android_Project\\resident\\key\\resident.jks
+DEBUG_KEY_STORE_PATH=C\:\\Users\\Saksh\\Desktop\\Sakshi\\Projects\\Resident\\key\\resident.jks
 DEBUG_KEY_STORE_PATH_PASSWORD=Resident@1998
 DEBUG_KEY_STORE_PATH_ALIAS=resident
-RELEASE_KEY_STORE_PATH=C\:\\Akshay\\Android_Projects\\Active_Android_Project\\resident\\key\\resident.jks
+RELEASE_KEY_STORE_PATH=C\:\\Users\\Saksh\\Desktop\\Sakshi\\Projects\\Resident\\key\\resident.jks
 RELEASE_KEY_STORE_PATH_PASSWORD=Resident@1998
 RELEASE_KEY_STORE_PATH_ALIAS=resident
