--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
   firebase_database: ^10.4.9
+  permission_handler: ^11.3.1
+  firebase_storage: ^11.6.9
+  image_picker: ^1.0.8
 
 dev_dependencies:
   flutter_test:
